# RetEva

./: .gitignore  evaluator-architecture.md  pyproject.toml  setup.py
configs/: ablation_study_grid.yaml  advanced_rag_full_stack.yaml  e2e_pubmed_qa_3branch.yaml  e2e_pubmed_qa_branched.yaml  e2e_pubmed_qa_small.yaml  evaluation_config.yaml  evaluation_config_admed_all_whisper.yaml  evaluation_config_admed_natural_whisper.yaml  evaluation_config_admed_selfretr_asr_text.yaml  evaluation_config_admed_selfretr_audio_emb.yaml  evaluation_config_admed_selfretr_fusion.yaml  evaluation_config_apm_jina.yaml  evaluation_config_augmentation.yaml  evaluation_config_clap_admed.yaml  evaluation_config_hani_selfretr_asr_text.yaml  evaluation_config_hani_selfretr_audio_emb.yaml  evaluation_config_hani_selfretr_fusion.yaml  evaluation_config_m4t_asr.yaml  evaluation_config_pubmed_qa.yaml  evaluation_config_pubmed_qa_hybrid.yaml  evaluation_config_pubmed_qa_hybrid_judge.yaml  evaluation_config_pubmed_qa_hybrid_rrf.yaml  evaluation_config_sonar_crossmodal.yaml  evaluation_config_whisper_jinaV4.yaml  fusion_audio_text_balanced.yaml  hybrid_retrieval_rrf.yaml  local_llm_example.yaml  medical_domain_best_practices.yaml  query_rewrite_iterative.yaml  showcase_asr_model_compare.yaml  showcase_audio_robustness.yaml  showcase_corpus_robustness.yaml  showcase_hybrid_rerank_mmr.yaml  showcase_multi_dataset_join.yaml  showcase_report_sinks.yaml  showcase_robustness_augmenter.yaml
configs/apm_tests/: admed_asr_selfretr_lora.yaml  apm_admed_m4t_abtt.yaml  apm_admed_m4t_attention.yaml  (+14 more)
evaluator/: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPROVEMENTS.md  README.md  __init__.py  api.py  diagnostics.py  errors.py  evaluate.py  idea.md  logging_config.py  plugins.py  public_api.py  setup.py
examples/: audio_perturbation_study.ipynb  m4t_validation.ipynb  pubmedqa_eval.ipynb  quickstart.ipynb  tts_listen.ipynb
(+584 files in other folders)
