[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluator"
version = "0.2.0"
description = "Evaluation framework for medical speech retrieval"
authors = [{ name = "Krystian" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0,<3",
    "transformers>=4.30,<5",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=2.2,<4",
    "faiss-cpu>=1.7,<2",
    "faster-whisper>=0.9,<2",
    # Data & metrics
    "datasets>=2.14",
    "jiwer>=3.0",
    "numpy>=1.24",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "rank-bm25>=0.2",
    "rouge-score>=0.1",
    "pandas>=1.5",
    # Visualization
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "plotly>=5.14",
    "kaleido>=0.2",
    # Utilities
    "tqdm>=4.64",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
webapi = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
]
notebooks = ["jupyter", "notebook", "ipywidgets"]
chromadb = ["chromadb>=0.4"]
qdrant = ["qdrant-client>=1.6"]
backends = ["chromadb>=0.4", "qdrant-client>=1.6"]
sonar = ["sonar-space"]
dev = ["pytest", "pytest-cov", "black", "flake8", "mypy"]
all = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jupyter",
    "notebook",
    "ipywidgets",
    "chromadb>=0.4",
    "qdrant-client>=1.6",
    "sonar-space",
]

[project.scripts]
evaluator = "evaluator.cli.main:main"
evaluator-webapi = "evaluator.webapi.__main__:main"

[tool.setuptools.packages.find]
include = ["evaluator*"]

# Ship the server-rendered UI assets with the package — without these the
# installed `evaluator-webapi` crashes on the missing static/templates dirs.
[tool.setuptools.package-data]
"evaluator.webapi" = ["static/*", "templates/*"]
